microservices-with-spring/16-service-mesh/kubernetes/resilience-tests/product-virtual-service-with-delay.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product
spec:
  hosts:
    - product
  http:
  - route:
    - destination:
        host: product
    fault:
      delay:
        fixedDelay: 3s
        percent: 100

# This definition says that all requests sent to the product service will be delayed by 3 seconds.
